# rayon-on-worker

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
demo/: Cargo.toml
src/: lib.rs  workerHelpers.js  workerHelpers.no-bundler.js  workerHelpers.worker.js
test/: Cargo.toml  README.md  package.json
