[package]
name = "rayon-on-worker"
version = "1.2.1"
authors = ["ExTEnS10N", "Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
license = "BSD-0-Clause OR Apache-2.0"
description = "Adapter for using Rayon-based concurrency on the Web"
keywords = ["web", "thread", "parallel", "concurrency", "webassembly"]
categories = ["concurrency", "wasm", "web-programming"]
readme = "README.md"
exclude = [".github"]
repository = "https://github.com/ExTEnS10N/rayon-on-worker"

[workspace.dependencies]
wasm-bindgen = "0.2.93"
rayon = { version = "1.10.0", features = ["web_spin_lock"]}

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.42"
rayon = { workspace = true }
crossbeam-channel = "0.5.9"
js-sys = "0.3.48"
console_error_panic_hook = { version = "0.1.7", optional = true }

[workspace]
members = ["demo", "test"]

[features]
nightly = []
no-bundler = []
console-panic = ["dep:console_error_panic_hook"]

[package.metadata.docs.rs]
features = ["nightly"]
targets = ["wasm32-unknown-unknown"]
rustc-args = ["-C", "target-feature=+atomics,+bulk-memory"]
